--- a/index.html
+++ b/index.html
@@ -55,6 +55,113 @@
 </nav>
  <!-- Navbar End -->
  
+ <!-- Animation start -->
+ <div class="stars">
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+</div>
+
+<div class="stars-2">
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+  <div class="star"></div>
+</div>
+ <!-- Animation End -->
 
 
  <!-- Home Section Start -->
@@ -68,7 +175,7 @@
     <div class="row align-items-center">
       <div class="col-md-7">
           <div class="home-text">
-            <h1>Anime NFT Get it Now</h1>
+            <h1>Get it Now</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit quia ut nobis nostrum necessitatibus non, omnis sint doloribus consequatur quaerat nihil accusamus cupiditate possimus dolorum voluptates at velit impedit qui.</p>
           </div>
           <div class="home-btn">
@@ -306,92 +413,109 @@
 
 
 <!-- Roadmap / Timeline Start -->
-<div class="container container-roadmap">
-  <div class="top-section">
-    <h1>Animated Timeline</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci asperiores ad odio aliquam debitis exercitationem tenetur sed numquam sint quibusdam. Minus quasi beatae, fugiat delectus tempore consequatur a sunt nemo.</p>
+<div class="timeline-container">
+  <h1 class="project-name">Responive Animated Timeline</h1> 
+  <div id="timeline">
+
+      <div class="timeline-item">
+        <div class="timeline-icon">
+          <i class="fa fa-key" aria-hidden="true"></i>
+        </div>
+        <div class="timeline-content">
+          <h2>The email was sent to the user</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+            Atque, facilis quo maiores magnam modi ab libero praesentium blanditiis.
+          </p>
+          <span class="time-stamp">Thu Jan - 26 - 2017 01:54</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-icon">
+          <i class="fa fa-key" aria-hidden="true"></i>
+        </div>
+        <div class="timeline-content right">
+          <h2>The email was delivered to the user</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur.
+          </p>
+          <span class="time-stamp">Thu Jan - 26 - 2017 </span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-icon">
+          <i class="fa fa-key" aria-hidden="true"></i>
+        </div>
+        <div class="timeline-content">
+          <h2>Quick Trial generation finished</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+          </p>
+           <span class="time-stamp">Thu Jan - 26 - 2017 01:54</span>
+        </div>
+      </div>
+
+       <div class="timeline-item">
+        <div class="timeline-icon">
+          <i class="fa fa-key" aria-hidden="true"></i>
+        </div>
+        <div class="timeline-content right">
+          <h2>Marketo Syncronization</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+          </p>
+           <span class="time-stamp">Thu Jan - 26 - 2017 01:54</span>
+        </div>
+      </div>
+
+    <div class="timeline-item">
+        <div class="timeline-icon">
+          <i class="fa fa-key" aria-hidden="true"></i>
+        </div>
+        <div class="timeline-content">
+          <h2>Application Licenses</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+          </p>
+           <span class="time-stamp">Thu Jan - 26 - 2017 01:54</span>
+        </div>
   </div>
-<div class="timeline">
-  <div class="line"></div>
-  <div class="section section-roadmap">
-    <div class="bead"></div>
-    <div class="content content-roadmap">
-      <h2>Web Design</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, quisquam cum officia praesentium architecto fugit maiores molestiae aliquid temporibus quidem numquam doloribus iusto eveniet reiciendis harum aut consequatur! Architecto, aliquid.</p>
-    </div>
+
+       <div class="timeline-item right">
+        <div class="timeline-icon">
+          <i class="fa fa-key" aria-hidden="true"></i>
+        </div>
+        <div class="timeline-content right">
+          <h2>Application Download Key</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+          </p>
+           <span class="time-stamp">Thu Jan - 26 - 2017 01:54</span>
+        </div>
+      </div>
+
+        <div class="timeline-item">
+        <div class="timeline-icon ">
+          <i class="fa fa-key" aria-hidden="true"></i>
+        </div>
+        <div class="timeline-content">
+          <h2>Quick Trial Generation Started</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+          </p>
+           <span class="time-stamp">Thu Jan - 26 - 2017 01:54</span>
+        </div>
+      </div>
+
+  </div>
   </div>
 
-  <div class="section section-roadmap">
-    <div class="bead"></div>
-    <div class="content content-roadmap">
-      <h2>Web Development</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, quisquam cum officia praesentium architecto fugit maiores molestiae aliquid temporibus quidem numquam doloribus iusto eveniet reiciendis harum aut consequatur! Architecto, aliquid.</p>
-    </div>
-  </div>
-  <div class="section section-roadmap">
-    <div class="bead"></div>
-    <div class="content content-roadmap">
-      <h2>Front End</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, quisquam cum officia praesentium architecto fugit maiores molestiae aliquid temporibus quidem numquam doloribus iusto eveniet reiciendis harum aut consequatur! Architecto, aliquid.</p>
-    </div>
-  </div>
-
-  <div class="section section-roadmap">
-    <div class="bead"></div>
-    <div class="content content-roadmap">
-      <h2>Backend</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, quisquam cum officia praesentium architecto fugit maiores molestiae aliquid temporibus quidem numquam doloribus iusto eveniet reiciendis harum aut consequatur! Architecto, aliquid.</p>
-    </div>
-  </div>
-
-  <div class="section section-roadmap">
-    <div class="bead"></div>
-    <div class="content content-roadmap">
-      <h2>SEO Optimized</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, quisquam cum officia praesentium architecto fugit maiores molestiae aliquid temporibus quidem numquam doloribus iusto eveniet reiciendis harum aut consequatur! Architecto, aliquid.</p>
-    </div>
-  </div>
-
-</div>
-
-
-
-</div>
 
 <!-- Roadmap / Timeline End -->
 
 
-
-
- <!-- Testimonials Section Start -->
-<!-- <section class="testimonials section-padding">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-8">
-        <div class="section-title">
-          <h2> Team</h2>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="testimonials-carousel">
-        <div class="testimonial-item">
-          <div class="img-box">
-            <img src="img/testimonial/1.jpg" alt="">
-            <i class="fas fa-quote-right" ></i>
-          </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, delectus?</p>
-          <h3></h3>
-          <span></span>
-          <div class="rating">
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
- <!-- Testimonials Section End -->
 
  <!-- Pricing Section Start -->
 <section class="pricing section-padding" data-scroll-index="4">
