--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Anime NFT</title>
+  <title>Alice</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +27,7 @@
  <nav class="navbar navbar-expand-lg fixed-top">
    <div class="container">
   <!-- Brand -->
-  <a class="navbar-brand" href="index.html">Anime NFT</a>
+  <a class="navbar-brand" href="index.html"></a>
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -36,18 +36,18 @@
 
   <!-- Navbar links -->
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav ml-auto mx-auto">
       <li class="nav-item">
-        <a class="nav-link active" data-scroll-nav="0" href="#">Home</a>
+        <a class="nav-link active" data-scroll-nav="0" href="#">Roadmap</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-scroll-nav="1" href="#">Features</a>
+        <a class="nav-link" data-scroll-nav="1" href="#">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-scroll-nav="2" href="#">Screenshot</a>
+        <a class="nav-link" data-scroll-nav="2" href="#">Team</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" data-scroll-nav="3" href="#">Pricing</a>
+        <a class="nav-link" data-scroll-nav="3" href="#">Purchase</a>
       </li>
     </ul>
   </div>
@@ -175,7 +175,7 @@
     <div class="row align-items-center">
       <div class="col-md-7">
           <div class="home-text">
-            <h1>Get it Now</h1>
+            <h1>Siva Alicia</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit quia ut nobis nostrum necessitatibus non, omnis sint doloribus consequatur quaerat nihil accusamus cupiditate possimus dolorum voluptates at velit impedit qui.</p>
           </div>
           <div class="home-btn">
@@ -190,7 +190,7 @@
             <div class="circle">
 
             </div>
-            <img src="img/app-screenshots/1.png" alt="Anime NFT">
+            <img src="img/character/chara.png" alt="Anime NFT">
           </div>
       </div>
     </div>
@@ -303,19 +303,19 @@
    <div class="row">
      <div class="owl-carousel screenshots-carousel">
        <div class="screenshot-item">
-         <img src="img/app-screenshots/1.png" alt="Art">
+         <img src="img/character/chara.png" alt="Art">
        </div>
        <div class="screenshot-item">
-        <img src="img/app-screenshots/2.png" alt="Art">
+        <img src="img/character/chara.png" alt="Art">
       </div>
       <div class="screenshot-item">
-        <img src="img/app-screenshots/3.png" alt="Art">
+        <img src="img/character/chara.png" alt="Art">
       </div>
       <div class="screenshot-item">
-        <img src="img/app-screenshots/1.png" alt="Art">
+        <img src="img/character/chara.png" alt="Art">
       </div>
       <div class="screenshot-item">
-       <img src="img/app-screenshots/2.png" alt="Art">
+       <img src="img/character/chara.png" alt="Art">
      </div>
      </div>
    </div>
@@ -641,7 +641,7 @@
  <!-- Team Section End -->
 
  <!-- Faq Section Start -->
-<section class="faq section-padding">
+<!-- <section class="faq section-padding">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8">
@@ -697,7 +697,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
  <!-- Faq Section End -->
 </div> 
  <!-- Footer Start -->
