--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-5 d-flex align-items-center justify-content-center">
-        <div class="fun-facts-img ">
+        <div class="fun-facts-img">
           <img src="img/app-screenshots/2.png" alt="fun Facts">
         </div>
       </div>
@@ -255,8 +255,16 @@
             <h2>Anime Art</h2>
           </div>
           <div class="fun-facts-text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat voluptatem, molestiae tenetur aliquid nulla tempora impedit incidunt adipisci perspiciatis et error, perferendis repellat voluptates quos dolorum doloremque? Dolor, dolore molestiae?</p>
-            <div class="row">
+            <p>...to a mech pilot in another, Lives of Asuna is a collection conceived and designed by ZumiDraws that explores the many lives of our titular character as she exists across the vast multiverse.</p><br>
+
+              <p>Totalling 10,000, each Asuna NFT is a unique combination of traits inspired by the rich world of anime, ranging from sci-fi and fantasy to slice-of-life.</p>><br>
+              
+              <h4>Customize Asuna and shape her story</h4><br>
+              <p>Asuna NFTs can be customized and shaped to your imagination with special items to alter her appearance. These items will be released after the initial launch and can be traded.</p><br>
+              
+              <h4>An accomplished idol in another life</h4><br>
+              <p>Asuna can do it all -- including life as a musician across the multiverse. Hearing alicia music will illuminate how imaginative your alicia life can be. Endless possibilities and stories await. We will release Asunas first song prior to the launch of the collection.</p>
+            <!-- <div class="row">
               <div class="col-sm-6">
                 <div class="fun-fact-item style-1">
                   <h3>10.000</h3>
@@ -281,7 +289,7 @@
                   <span>FHD quality</span>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -515,6 +523,42 @@
 
 <!-- Roadmap / Timeline End -->
 
+<!-- How build -->
+
+<section class="how-build section-padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-5 d-flex align-items-center justify-content-center">
+        <div class="how-build-img">
+          <img src="img//character//character.png" alt="build image">
+        </div>
+      </div>
+        <div class="col-lg-6 col-md-7">
+            <div class="section-title">
+              <h2>Build</h2>
+            </div>
+            <div class="how-build-text">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe ab fugiat quibusdam, eligendi, sit alias sequi dicta repellendus, quasi voluptate quisquam iure eveniet quos accusamus neque nisi earum aliquid! Culpa.</p>
+          </div>
+        </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 col-md-5 d-flex align-items-center justify-content-center">
+        <div class="how-build-img">
+          <img src="img//character//character.png" alt="build image">
+        </div>
+      </div>
+        <div class="col-lg-6 col-md-7">
+            <div class="section-title">
+              <h2>Build</h2>
+            </div>
+            <div class="how-build-text">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe ab fugiat quibusdam, eligendi, sit alias sequi dicta repellendus, quasi voluptate quisquam iure eveniet quos accusamus neque nisi earum aliquid! Culpa.</p>
+          </div>
+        </div>
+    </div>
+  </div>
+</section>
 
 
  <!-- Pricing Section Start -->
@@ -617,22 +661,36 @@
       <div class="col-lg-4 col-md-6">
         <div class="team-item">
           <img src="img/team/3.jpg" alt="team">
-          <h3>luciel</h3>
+          <h3>Lutojoz</h3>
           <span>project manager</span>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="team-item">
           <img src="img/team/3.jpg" alt="team">
-          <h3>luciel</h3>
+          <h3>heZou</h3>
+          <span>developer</span>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="team-item">
+          <img src="img/team/3.jpg" alt="team">
+          <h3>Crescendaz</h3>
+          <span>product</span>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="team-item">
+          <img src="img/team/3.jpg" alt="team">
+          <h3>bigSister</h3>
           <span>artist</span>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="team-item">
           <img src="img/team/3.jpg" alt="team">
-          <h3>luciel</h3>
-          <span>Developer</span>
+          <h3>owlady</h3>
+          <span>artist</span>
         </div>
       </div>
     </div>
