--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </nav>
  <!-- Navbar End -->
  
- <!-- Animation start -->
+ <!-- Star Animation start -->
  <div class="stars">
   <div class="star"></div>
   <div class="star"></div>
@@ -161,7 +161,7 @@
   <div class="star"></div>
   <div class="star"></div>
 </div>
- <!-- Animation End -->
+ <!-- Star Animation End -->
 
 
  <!-- Home Section Start -->
@@ -421,8 +421,10 @@
 
 
 <!-- Roadmap / Timeline Start -->
+    
 <div class="timeline-container">
-  <h1 class="project-name">Responive Animated Timeline</h1> 
+  <h1 class="project-name">Main Timeline</h1> 
+    <!--
   <div id="timeline">
 
       <div class="timeline-item">
@@ -518,8 +520,11 @@
       </div>
 
   </div>
+-->
+    <div id="rdmap">
+      <img src="img//roadmap/Roadmap7.png" alt="build image">
+    </div>
   </div>
-
 
 <!-- Roadmap / Timeline End -->
 
