--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 <!-- Roadmap / Timeline Start -->
     
 <div class="timeline-container">
-  <h1 class="project-name">Main Timeline</h1> 
+  <h1 class="project-name">Main Timelines</h1> 
     <!--
   <div id="timeline">
 
