--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 
 <!-- Roadmap / Timeline Start -->
 <div class="timeline-container">
-  <h1 class="project-name">Responive Animated Timeline</h1> 
+  <h1 class="project-name">Responive Animated Timelines</h1> 
   <div id="timeline">
 
       <div class="timeline-item">
