--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
         <div class="team-item">
           <img src="img/team/3.jpg" alt="team">
           <h3>Crescendaz</h3>
-          <span>product</span>
+          <span>marketing</span>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
