--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
       <div class="col-lg-4 col-md-6">
         <div class="team-item">
           <img src="img/team/3.jpg" alt="team">
-          <h3>bigSister</h3>
+          <h3>AniMutung</h3>
           <span>artist</span>
         </div>
       </div>
