--- a/index.html
+++ b/index.html
@@ -163,58 +163,50 @@
 
  <!-- Home Section Start -->
 <section class="home d-flex align-items-center" id="home" data-scroll-index="0">
-  <div class="effect-wrap">
-    <i class="fas fa-plus effect effect-1"></i>
-    <i class="fas fa-plus effect effect-2"></i>
-    <i class="fas fa-circle-notch effect effect-3"></i>
-  </div>
   <div class="container">
     <div class="row align-items-center">
-      <div class="ourlogo">
-        <img src="img/Logo2.png" alt="Anime NFT">
-      </div>
-      <div class="col-md-7">
+      <!-- <div class="col-md-7">
           <div class="home-text">
             <h1>Siva Alicia</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit quia ut nobis nostrum necessitatibus non, omnis sint doloribus consequatur quaerat nihil accusamus cupiditate possimus dolorum voluptates at velit impedit qui.</p>
           </div>
           <div class="home-btn">
             <a href="#" data-scroll-goto="3" class="btn btn-1"> Mint Now</a>
-            <!-- <button type="button" class="btn btn-1 video-play-btn">
+            <button type="button" class="btn btn-1 video-play-btn">
               <i class="fas fa-play"></i>
-            </button> -->
+            </button>
           </div>
-      </div>
+      </div> -->
       <div class="col-md-5 text-center">
           <div class="home-img">
-            <div class="circle">
-
+            <!-- <div class="circle">
             </div>
-            <img src="img/character/chara.png" alt="Anime NFT">
+            <img src="img/character/character.png" alt="Anime NFT">
           </div>
-      </div>
+      </div> -->
     </div>
   </div>
-  <div id="first-section" class="first-section">
-    <a href="#down-selection" class="ctn-icon">
-      <i class="fa fa-angle-down" aria-hidden="true"></i>
-    </a>
-  </div>
+  
 </section>
  <!-- Home Section End -->
 
  <!-- Intro Animation Start -->
-        <div class="hero-image">
-          <div class="wrapper-img">
+        <section class="hero-image">
+          <div class="front-img">
             <div class="box"></div>
             <div>
-              <img class="image" src="img/character/character.png" />
+              <img class="image" id="imges" src="img/Logo2.png" />
             </div>
           </div>
         </div>  
-        <div class="header"><p class="title">Anime</p></div>
+        <div class="header"><p class="title"></p></div>
 </section>
 <!-- Intro Animation End -->
+<div id="first-section" class="first-section">
+  <a href="#down-selection" class="ctn-icon">
+    <i class="fa fa-angle-down" aria-hidden="true"></i>
+  </a>
+</div>
 
  <!-- Features Section Start -->
  <!-- <section class="features section-padding" id="features" data-scroll-index="1">
